<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity=""
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background"
    tools:context="com.covitrack.david.covitrack.MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity=""
        android:orientation="horizontal"
        tools:context="com.covitrack.david.covitrack.MainActivity">

        <TextView
            android:id="@+id/real-time-location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="@color/colorWhite"
            android:text="@string/unknown_location"/>

        <ToggleButton
            android:id="@+id/togglebutton"
            style="@android:style/Widget.Holo.Button.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onTrackingToggleClicked"
            android:shadowColor="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textOff="@string/tracking_on"
            android:textOn="@string/tracking_off"
            android:layout_alignParentRight="true"
            android:textSize="12sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:text="@string/contact_infected_agenda"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        android:textStyle="bold" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="137dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:width="150dp"
            android:height="100dp"
            android:textStyle="bold"
            android:background="@drawable/stroke_button_style"
            android:text="@string/user_contact_status"
            android:onClick="onContactButtonClicked"
            android:textColor="@color/colorPrimary" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/fill_button_style"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:onClick="onInfectedButtonClicked"
            android:width="150dp"
            android:height="100dp"
            android:text="@string/user_infected_status" />

    </RelativeLayout>

    <Button
        android:id="@+id/help"
        android:background="@color/colorDark"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@id/mainControls"
        android:layout_marginBottom="15dp"
        android:text="@string/help" />

    <Button
        android:id="@+id/language"
        android:background="@color/colorDark"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/mainControls"
        android:layout_alignTop="@+id/help"
        android:text="@string/language"/>

</RelativeLayout>